# rnnpp

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/xor/: train_xor.cc  train_xor_batch.cc
src/: CMakeLists.txt  dim.cc  dim.h  error.h  expr.cc  expr.h  gradcheck.cc  gradcheck.h  graph.h  node.cc  node.h  optimizer.cc  optimizer.h  parameter.cc  parameter.h  rnnpp.cc  rnnpp.h  tensor.cc  tensor.h
tests/: CMakeLists.txt  dim_test.cc  expr_test.cc  main.cpp  node_test.cc  parameter_test.cc  tensor_test.cc  test_dim.cc  test_node.cc  test_tensor.cc
